Fixed text overflow issue on banner

--- a/core-library/component-styling/banner/_banner.scss
+++ b/core-library/component-styling/banner/_banner.scss
@@ -178,6 +178,7 @@
 
   .banner-content {
     align-self: flex-start;
+    word-break: break-word;
 
     * {
       margin: 2px 0;
